--- a/src/_includes/partials/global/site-foot.njk
+++ b/src/_includes/partials/global/site-foot.njk
@@ -17,7 +17,7 @@
     </div>
     {% if site.showThemeCredit %}
       <p class="[ site-foot__credit ] [ pad-top-900 ]">
-        Powered by the <a href="https://hylia.website" rel="external">Hylia Eleventy Starter Kit v{{ pkg.version }}</a>.
+        &#169; 2020 FindMeMore.com All Rights Reserved | <a href="/contact">Contact</a> | <a href="/colophon">Colophon</a>
       </p>
     {% endif %}
   </div>
